Fix broken link if the field is the first visible one

--- a/assets/farbtastic.css
+++ b/assets/farbtastic.css
@@ -25,8 +25,12 @@
 	position: relative;
 	top: .3rem;
 	margin-top: -.1rem;
+	padding-top: 0;
 	height: 1rem;
 	width: 1rem;
 	border: .1rem solid black;
-	cursor: default;
+	color: black;
+}
+.colorchooser-index-preview:hover {
+	border-color: currentColor;
 }
